[project]
name = "pypneu"
version = "0.1.0"
dependencies = [
    "clingo>=5.5.0",
    "pydot>=1.4.2",
    "imageio>=2.20.0",
    "Pillow>=9.0.0",
]

[project.optional-dependencies]
# Dependencies specifically for the Web Interface
ui = [
    "streamlit>=1.20.0",
    "pandas>=1.5.0",
]

[project.scripts]
pypneu = "pypneu.cli:main"